# keyword_detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  keyword.cpp
main/edge-impulse-sdk/porting/: ei_classifier_porting.h
main/edge-impulse-sdk/porting/espressif/: ei_classifier_porting.cpp
main/model-parameters/: model_metadata.h  model_variables.h
main/tflite-model/: tflite_learn_27_compiled.cpp  tflite_learn_27_compiled.h
